MasterExpense config, DTO'yu, VM'ler yazıldı. Masraf create, düzenleme, index sayfaları oluşturuldu.

--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -244,7 +244,7 @@
 
 </body>
 
-@*
+
 <script>
     var dropdown1 = document.getElementById("pageSizeDropdown");
 
@@ -265,4 +265,4 @@
 
         }
     }
-</script>*@
+</script>
