Avansa para birimlerinin eklenmesi , sayfalarda oluşturması, izin bugünden önce girilebilir,giriş işlemi başarısız mesajı yapıldı.

--- a/HR_Project/HR_Project.Presentation/Views/Account/Login.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Account/Login.cshtml
@@ -91,6 +91,24 @@
 
     </div>
 
+
+    @section Scripts {
+        @if (TempData.ContainsKey("Toastrsuccess"))
+        {
+            <script>
+                console.log('Toastr Başarı:', '@TempData["Toastrsuccess"]');
+                toastr.success('@TempData["Toastrsuccess"]');
+            </script>
+        }
+
+        @if (TempData.ContainsKey("Toastrerror"))
+        {
+            <script>
+                toastr.error('@TempData["Toastrerror"]');
+            </script>
+        }
+    }
+
     <!-- Bootstrap core JavaScript-->
     <script src="~/startbootstrap/vendor/jquery/jquery.min.js"></script>
     <script src="~/startbootstrap/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
