--- a/HR_Project/HR_Project.Presentation/Views/Advance/Create.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Create.cshtml
@@ -33,6 +33,14 @@
             </div>
 
             <div class="form-group">
+                <label asp-for="Currency" class="control-label">Para Birimi</label>
+                <select class="form-control" asp-for="Currency" asp-items="EnumHelper.GetEnumSelectList<Currency>()">
+                    <option value="-1">Para Birimi</option>
+                </select>
+                <span asp-validation-for="Currency" class="text-danger"></span>
+            </div>
+
+            <div class="form-group">
                 <label asp-for="LastPaidDate" class="control-label">Talep Edilen Tarih</label>
                 <input asp-for="LastPaidDate" class="form-control" type="date"/>
                 <span asp-validation-for="LastPaidDate" class="text-danger"></span>
