--- a/HR_Project/HR_Project.Presentation/Views/Expense/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Expense/Update.cshtml
@@ -7,7 +7,7 @@
     Layout = "~/Views/Shared/_GeneralLayout.cshtml";
 }
 
-<h1 class="p-4">Masraf Güncelle</h1>
+<h1>Masraf Güncelle</h1>
 
 <hr />
 
