Enumlar Türkçe'ye çevrildi, Profil ad soyadı değiştirilemez yapıldı.

--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -101,7 +101,7 @@
                                         @item.LastPaidDate.ToShortDateString()
                                     </td>
                                     <td>
-                                        @item.Condition
+                                        @item.Condition.GetDisplayName()
                                     </td>
                                     @{
                                         if (item.Condition == ConditionType.Pending)
