--- a/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Advance/Index.cshtml
@@ -1,4 +1,5 @@
-﻿@using HR_Project.Common.Models.VMs;
+﻿@using HR_Project.Common.Extensions;
+@using HR_Project.Common.Models.VMs;
 @using HR_Project.Domain.Enum;
 @using X.PagedList;
 @model IPagedList<AdvanceVM>
