--- a/HR_Project/HR_Project.Presentation/Views/Account/Login.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Account/Login.cshtml
@@ -77,7 +77,7 @@
                                         <a class="small" href="forgot-password.html">Şifremi Unuttum?</a>
                                     </div>
                                     <div class="text-center">
-                                        <a class="small" href="register.html">Hesap Oluştur!</a>
+                                        <a class="small" asp-action="Register">Hesap Oluştur!</a>
                                     </div>
                                 </div>
                             </div>
