--- a/HR_Project/HR_Project.Presentation/Views/Dashboard/Index.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Dashboard/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@model DashboardViewModel
+﻿@*@model DashboardViewModel
 @{
     ViewData["Title"] = "Dashboard";
     Layout = "~/Views/Shared/_GeneralLayout.cshtml";
@@ -108,3 +108,4 @@
         }
     </div>
 </div>
+*@
