--- a/HR_Project/HR_Project.Presentation/Views/Personnel/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Personnel/Update.cshtml
@@ -53,16 +53,19 @@
                         </div>
 
                         <div class="col-md-12">
-                            <label class="labels">Şehir</label>
-                            <input type="text" class="form-control" placeholder="Şehir giriniz" asp-for="City">
-                            <span asp-validation-for="City" class="text-danger"></span>
+                            <label class="labels" asp-for="CityId">Şehir</label>
+                            <select asp-for="CityId" id="CityId" asp-items="Model.CityList" class="form-control">
+                                <option value="" selected disabled>Şehir seçiniz</option>
+                            </select>
+                            <span asp-validation-for="CityId" class="text-danger"></span>
                         </div>
 
-
                         <div class="col-md-12">
-                            <label class="labels">İlçe</label>
-                            <input type="text" class="form-control" placeholder="İlçe giriniz" asp-for="RegionName">
-                            <span asp-validation-for="RegionName" class="text-danger"></span>
+                            <label class="labels" asp-for="RegionId">İlçe</label>
+                            <select asp-for="RegionId" id="CityId" asp-items="Model.Regions" class="form-control">
+                                <option value="" selected disabled>İlçe seçiniz</option>
+                            </select>
+                            <span asp-validation-for="RegionId" class="text-danger"></span>
                         </div>
                         <div class="col-md-12">
                             <label class="labels">Uyruk</label>
@@ -143,20 +146,20 @@
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Yöneticisi</label>
-                        <input type="text" disabled="disabled" class="form-control"  asp-for="Manager.Name">
-                        <span asp-validation-for="Manager.Name" class="text-danger"></span>
+                        <input type="text" disabled="disabled" class="form-control"  asp-for="ManagerName">
+                        <span asp-validation-for="ManagerName" class="text-danger"></span>
 
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Şirketi</label>
-                        <input type="text" disabled="disabled" class="form-control"  asp-for="Company.Name">
-                        <span asp-validation-for="Company.Name" class="text-danger"></span>
+                        <input type="text" disabled="disabled" class="form-control"  asp-for="CompanyName">
+                        <span asp-validation-for="CompanyName" class="text-danger"></span>
 
                     </div>
                     <div class="col-md-12">
                         <label class="labels">Departmanı</label>
-                        <input type="text" disabled="disabled" class="form-control"  asp-for="Department.Name">
-                        <span asp-validation-for="Department.Name" class="text-danger"></span>
+                        <input type="text" disabled="disabled" class="form-control"  asp-for="DepartmentName">
+                        <span asp-validation-for="DepartmentName" class="text-danger"></span>
 
                     </div>
 
