--- a/HR_Project/HR_Project.Presentation/Views/Account/Register.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Account/Register.cshtml
@@ -125,6 +125,12 @@
                                                    placeholder="Doğum Tarihi...">
                                         </div>
 
+                                        <div class="form-group" data-validate="HireDate">
+                                            <input type="date" class="form-control form-control-user" name="HireDate"
+                                                   id="exampleInputHireDate" aria-describedby="BirthDateHelp"
+                                                   placeholder="İşe Giriş Tarihi...">
+                                        </div>
+
                                         <div class="form-group" data-validate="Password">
                                             <input type="password" class="form-control form-control-user" name="Password"
                                                    id="exampleInputPassword" placeholder="Şifre">
