--- a/HR_Project/HR_Project.Presentation/Views/Personnel/Update.cshtml
+++ b/HR_Project/HR_Project.Presentation/Views/Personnel/Update.cshtml
@@ -15,8 +15,9 @@
     <div class="container rounded bg-white mt-3 mb-5 ">
         <div class="row">
             <div class="col-md-3 border-right">
-                <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="https://st3.depositphotos.com/15648834/17930/v/600/depositphotos_179308454-stock-illustration-unknown-person-silhouette-glasses-profile.jpg"><span class="font-weight-bold">@Model.Name</span><span class="text-black-50">@Model.Email</span><span> </span></div>
+                <div class="d-flex flex-column align-items-center text-center p-3 py-5"><img class="rounded-circle mt-5" width="150px" src="@Model.ImagePath"><span class="font-weight-bold">@Model.Name</span><span class="text-black-50">@Model.Email</span><span> </span></div>
             </div>
+
             <div class="col-md-5 border-right">
                 <div class="p-3 py-5">
                     <div class="d-flex justify-content-between align-items-center mb-3">
@@ -62,7 +63,7 @@
 
                         <div class="col-md-12">
                             <label class="labels" asp-for="RegionId">İlçe</label>
-                            <select asp-for="RegionId" id="CityId" asp-items="Model.Regions" class="form-control">
+                            <select asp-for="RegionId" id="RegionId" asp-items="Model.Regions" class="form-control">
                                 <option value="" selected disabled>İlçe seçiniz</option>
                             </select>
                             <span asp-validation-for="RegionId" class="text-danger"></span>
@@ -104,14 +105,23 @@
 
                     </div>
                     <input type="hidden" asp-for="HireDate">
-@*                    <input type="hidden" asp-for="Department.Name">*@
                     <input type="hidden" asp-for="Title">
                     <input type="hidden" asp-for="Email">
                     <input type="hidden" asp-for="BloodType">
+                    <input type="hidden" asp-for="DepartmentName">
+                    <input type="hidden" asp-for="ManagerName">
+                    <input type="hidden" asp-for="CompanyName">
+                    <input type="hidden" asp-for="ImagePath">
+                    <input type="hidden" asp-for="CompanyId">
+                    <input type="hidden" asp-for="ManagerId">
+                    <input type="hidden" asp-for="DepartmentId">
+                    <input type="hidden" asp-for="Nation">
+                    <input type="hidden" asp-for="Gender">
+                    <input type="hidden" asp-for="BirthDate">
+                    
 
-                    <div class="mt-5 text-center">
-                        <input type="submit" asp-action="Update" asp-controller="Personnel" value="Kaydet" class="btn btn-primary profile-button" />
-                    </div>
+
+                   
                 </div>
             </div>
             <div class="col-md-4">
@@ -166,6 +176,10 @@
                     
                 </div>
             </div>
+         
+        </div>
+        <div class="mt-5 text-center">
+            <input type="submit" asp-action="Update" asp-controller="Personnel" value="Kaydet" class="btn btn-primary profile-button" />
         </div>
     </div>
 </form>
